--- a/Attach Sound Files.ipynb
+++ b/Attach Sound Files.ipynb
@@ -1,8 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO:\n",
+    "Skip header of transcribed file. \n",
+    "Add skip audio file fetch if file already exists\n",
+    "Add tags for sound retrievel (sound, nosound, +/- error?)\n",
+    "Add part of speech parsing/tag\n",
+    "Add check for irregular verbs\n",
+    "    - if irregular, manual review (vs long-term automate creation of irregular past tense cards?)\n",
+    "Synonyms...\n",
+    "\n",
+    "DONE: \n",
+    "Add retry logic to fetch wiki page"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,31 +29,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class TranslationPair:\n",
-    "    def __init__(self, dutch_word, english_translation, processed_vocab):\n",
+    "    def __init__(self, dutch_word, english_translation, processed_vocab, wiki_url = None, wiki_page = None, audio_url = None, tags=''):\n",
     "        self.dutch_word = dutch_word\n",
     "        self.english_translation = english_translation\n",
-    "        self.processed_vocab = processed_vocab"
+    "        self.processed_vocab = processed_vocab\n",
+    "        self.wiki_url = wiki_url\n",
+    "        self.wiki_page = wiki_page\n",
+    "        self.audio_url = audio_url\n",
+    "        self.tags = tags"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_wait_time():\n",
-    "    wait_time = random.uniform(1, 7)\n",
+    "    wait_time = random.uniform(1, 3)\n",
     "    return wait_time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +110,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fetch wiki page for each word in vocab list\n",
+    "\n",
+    "def fetch_wiki_page(session, word):\n",
+    "    url = f\"http://nl.wiktionary.org/wiki/{word.processed_vocab}\"\n",
+    "    print(url)\n",
+    "    response = session.get(url)#, headers=headers)\n",
+    "    attempt = 0\n",
+    "    while attempt < 5:\n",
+    "        if response.status_code == 200:\n",
+    "            soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "            word.wiki_url = url\n",
+    "            word.wiki_page = soup       \n",
+    "            break\n",
+    "        elif response.status_code == 404:\n",
+    "            print(f'No wiki page exists for {word.processed_vocab}.')\n",
+    "            break\n",
+    "        else:\n",
+    "            print(f\"Failed to fetch page for {word.processed_vocab} (Status Code: {response.status_code}); attempt = {attempt}\")\n",
+    "            time.sleep(30) # retry in 30 seconds\n",
+    "            attempt += 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parse relevant info from wiki page (only sound file for now)\n",
+    "def parse_wiki_page(word):\n",
+    "    page = word.wiki_page\n",
+    "    # parsing audio file from scraped wiki page\n",
+    "    # Find <span> elements with the class \"IPA unicode audiolink\"\n",
+    "    if page:\n",
+    "        spans = page.find_all('span', class_=\"IPA unicode audiolink\")\n",
+    "        if spans:\n",
+    "            if len(spans) > 1:\n",
+    "                print(f'{word.processed_vocab} has multiple sound files;    downloading only the first. /n Check word listing for other files:     {word.wiki_url}')\n",
+    "            for span in spans:\n",
+    "                # Find the <a> tag inside the <span>\n",
+    "                link = span.find('a', class_=\"internal\")\n",
+    "\n",
+    "                if not link and not link['href']:\n",
+    "                    print(f'No href link found for {word}')\n",
+    "\n",
+    "                elif link and link['href']:\n",
+    "                    word.audio_url = \"http:\" + link['href']  # Construct the full   URL                                 \n",
+    "                    break  # Exit after recording the first valid audio file\n",
+    "                else:\n",
+    "                    print(f\"No valid audio link found for {word}\")\n",
+    "        else:\n",
+    "            print(f\"No audio links found for {word}\")\n",
+    "    else: print(f'No parsing performed for {word.processed_vocab}.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,52 +179,38 @@
     "# If multiple audio files are listed, the user is informed & the first is used.\n",
     "\n",
     "def fetch_audio(session, word, save_folder):\n",
-    "    url = f\"http://nl.wiktionary.org/wiki/{word}\"\n",
-    "    response = session.get(url)#, headers=headers)\n",
+    "    file_name = f\"Nl-{word.processed_vocab}.ogg\" # matches default naming   convention for manual file download\n",
+    "    file_path = os.path.join(save_folder, file_name)\n",
     "\n",
-    "    if response.status_code == 200:\n",
-    "        soup = BeautifulSoup(response.content, 'html.parser')\n",
-    "        # Find <span> elements with the class \"IPA unicode audiolink\"\n",
-    "        spans = soup.find_all('span', class_=\"IPA unicode audiolink\")\n",
-    "        if spans:\n",
-    "            if len(spans) > 1:\n",
-    "                print(f'{word} has multiple sound files; downloading only the first. /n Check word listing for other files: {url}')\n",
-    "\n",
-    "            for span in spans:\n",
-    "                time.sleep(get_wait_time()) # adding wait time between requests to hopefully prevent 403 error\n",
-    "\n",
-    "                # Find the <a> tag inside the <span>\n",
-    "                link = span.find('a', class_=\"internal\")\n",
-    "\n",
-    "                if not link or not link['href']:\n",
-    "                    print(f'No href link found for {word}')\n",
-    "\n",
-    "                elif link and link['href']:\n",
-    "                    audio_url = \"http:\" + link['href']  # Construct the full URL\n",
-    "                    file_name = f\"Nl-{word}.ogg\" # matches default naming convention for manual file download\n",
-    "                    file_path = os.path.join(save_folder, file_name)\n",
-    "                    \n",
-    "                    with open(file_path, 'wb') as f:\n",
-    "                        attempt = 0\n",
-    "                        while attempt < 5:\n",
-    "                            audio_response = session.get(audio_url)#, headers=headers)\n",
-    "                            audio_file = audio_response.content\n",
-    "                            if audio_response.status_code == 200:\n",
-    "                                f.write(audio_file)\n",
-    "                                print(f\"Downloaded: {file_name} from {url}\")\n",
-    "                                return file_name # exit after downloading successfully\n",
-    "                            else:\n",
-    "                                print(f\"Failed to download: {file_name} from    {url} dt {audio_response.status_code}; attempt = {attempt}\")\n",
-    "                                time.sleep(30) # retry in 30 seconds\n",
-    "                                attempt += 1\n",
-    "                                                            \n",
-    "                    break  # Exit after downloading the first valid audio file\n",
-    "            else:\n",
-    "                print(f\"No valid audio link found for {word}\")\n",
-    "        else:\n",
-    "            print(f\"No audio links found for {word}\")\n",
-    "    else:\n",
-    "        print(f\"Failed to fetch page for {word} (Status Code: {response.status_code})\")"
+    "    if word.audio_url:\n",
+    "        with open(file_path, 'wb') as f:\n",
+    "            attempt = 0\n",
+    "            while attempt < 5:\n",
+    "                audio_response = session.get(word.audio_url)#, headers=headers)\n",
+    "                audio_file = audio_response.content\n",
+    "                if audio_response.status_code == 200:\n",
+    "                    f.write(audio_file)\n",
+    "                    print(f\"Downloaded: {file_name} from {word.audio_url}\")\n",
+    "                    return file_name # exit after downloading successfully\n",
+    "                else:\n",
+    "                    print(f\"Failed to download: {file_name} from {word.audio_url}   dt {audio_response.status_code}; attempt = {attempt}\")\n",
+    "                    time.sleep(30) # retry in 30 seconds\n",
+    "                    attempt += 1\n",
+    "    else: print(f'No audio file retrieved for {word.processed_vocab}.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_to_file(write_data, file_location):\n",
+    "    with open(file_location, 'w', newline='') as csvfile:\n",
+    "        writer = csv.writer(csvfile)\n",
+    "        for k in write_data.items():\n",
+    "            writer.writerow(k)\n",
+    "    print('File complete.')\n"
    ]
   },
   {
@@ -152,7 +220,7 @@
    "outputs": [],
    "source": [
     "# hardcoded test file\n",
-    "vocab_file_path = r\"C:\\Users\\wisery\\Desktop\\Words that need sound.csv\"\n",
+    "vocab_file_path = r\"C:\\Users\\wisery\\Downloads\\Dutch-English-Vocabulary.csv\"\n",
     "\n",
     "# avoid bot flagging\n",
     "session = requests.Session()\n",
@@ -160,48 +228,41 @@
     "    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/114.0.0.0 Safari/537.36'\n",
     "}\n",
     "session.headers.update(headers)\n",
-    "time.sleep(get_wait_time()) # wait a random amount of time between words \n",
     "\n",
-    "# prepare save location\n",
-    "save_folder = r'C:\\Users\\wisery\\AppData\\Roaming\\Anki2\\User 1\\collection.media'\n",
+    "# prepare save locations\n",
+    "audio_save_folder = r\"C:\\Users\\wisery\\Data Science Projects\\Anki Deck\\test sound files\"\n",
+    "vocab_output_location = r'C:\\Users\\wisery\\Data Science Projects\\Anki Deck\\audio_added_vocab.csv'\n",
     "\n",
     "#r'C:\\Users\\wisery\\AppData\\Roaming\\Anki2\\User 1\\collection.media' #default Anki media storage location\n",
     "\n",
     "# r\"C:\\Users\\wisery\\Data Science Projects\\Anki Deck\\test sound files\"\n",
     "# test data storage\n",
-    "os.makedirs(save_folder, exist_ok=True)\n",
+    "os.makedirs(audio_save_folder, exist_ok=True)\n",
     "\n",
-    "# prepare words\n",
-    "#with open(vocab_file_path, newline='') as csvfile:\n",
-    "#        vocab_list = csv.reader(csvfile, delimiter=',', quotechar='|')\n",
-    "        \n",
-    "words = process_vocab(vocab_file_path) # yields dictionary w/ keys = processed dutch word & values = original dutch & english translations\n",
+    "# prepare words       \n",
+    "words = process_vocab(vocab_file_path) # yields list of TranslationPair objects\n",
     "print('All vocab processed.')\n",
     "\n",
-    "# get the audio files for each word\n",
     "write_data = {}\n",
+    "# Fetch & parse wiki page + fetch audio file for each word in vocab list\n",
     "for word in words:\n",
-    "    audio_file_name = fetch_audio(session, word.processed_vocab, save_folder)\n",
+    "    fetch_wiki_page(session, word)\n",
+    "    parse_wiki_page(word)\n",
+    "    time.sleep(get_wait_time())\n",
+    "    audio_file_name = fetch_audio(session, word, audio_save_folder)\n",
     "    #audio_file_name = 'Nl-'+ word.processed_vocab +'.ogg'\n",
     "\n",
     "    # modify formatting based on if audio file download was successful\n",
     "    if not audio_file_name:\n",
     "        dutch_complete = word.dutch_word\n",
-    "\n",
     "    else:\n",
     "        dutch_complete = f'{word.dutch_word} \\n[sound:{str(audio_file_name)}]'\n",
-    "    #time.sleep(get_wait_time())\n",
+    "\n",
     "    write_data[dutch_complete]= f'{word.english_translation}'\n",
-    "    \n",
+    "\n",
     "print('Sound files collected; writing to file.')\n",
     "\n",
-    "with open(r'C:\\Users\\wisery\\Data Science Projects\\Anki Deck\\audio_added_vocab.csv', 'w', newline='') as csvfile:\n",
-    "    writer = csv.writer(csvfile)\n",
-    "    for k in write_data.items():\n",
-    "        writer.writerow(k)\n",
-    "\n",
-    "print('File complete.')\n",
-    "\n"
+    "write_to_file(write_data, vocab_output_location)"
    ]
   },
   {
