Added feature: skip audio file fetch if file already exists in save location.

--- a/Attach Sound Files.ipynb
+++ b/Attach Sound Files.ipynb
@@ -5,21 +5,26 @@
    "metadata": {},
    "source": [
     "TODO:\n",
-    "Skip header of transcribed file. \n",
-    "Add skip audio file fetch if file already exists\n",
     "Add tags for sound retrievel (sound, nosound, +/- error?)\n",
     "Add part of speech parsing/tag\n",
     "Add check for irregular verbs\n",
     "    - if irregular, manual review (vs long-term automate creation of irregular past tense cards?)\n",
     "Synonyms...\n",
+    "Uncouple fetch audio method & translationPair class?\n",
+    "Move more of your main script into functions for a cleaner look. Something like \n",
+    "    for word in words:\n",
+    "        processWord(word);\n",
+    "    where processWord would fetch the page, parse it, fetch the audio file...etc.\n",
     "\n",
     "DONE: \n",
-    "Add retry logic to fetch wiki page"
+    "Add retry logic to fetch wiki page\n",
+    "Skip header of transcribed file. \n",
+    "Add skip audio file fetch if file already exists"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,18 +51,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_wait_time():\n",
-    "    wait_time = random.uniform(1, 3)\n",
+    "    wait_time = random.uniform(1, 2)\n",
     "    return wait_time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,6 +73,8 @@
     "    with open(vocab_file_path, newline='', encoding = 'utf-8-sig') as csvfile:\n",
     "        vocab_list = csv.reader(csvfile, delimiter=',', quotechar='\"')\n",
     "        processed_vocab_list = []\n",
+    "        \n",
+    "        next(vocab_list, None)  # skip the headers\n",
     "\n",
     "        for word_pair in vocab_list:\n",
     "            dutch_phrase = word_pair[0]\n",
@@ -110,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +188,7 @@
     "def fetch_audio(session, word, save_folder):\n",
     "    file_name = f\"Nl-{word.processed_vocab}.ogg\" # matches default naming   convention for manual file download\n",
     "    file_path = os.path.join(save_folder, file_name)\n",
-    "\n",
+    "    \n",
     "    if word.audio_url:\n",
     "        with open(file_path, 'wb') as f:\n",
     "            attempt = 0\n",
@@ -201,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,9 +222,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All vocab processed.\n",
+      "http://nl.wiktionary.org/wiki/aan_de_bak_moet\n",
+      "No wiki page exists for aan_de_bak_moet.\n",
+      "No parsing performed for aan_de_bak_moet.\n",
+      "Audio previously downloaded for aan_de_bak_moet. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/smokkelen\n",
+      "Audio previously downloaded for smokkelen. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/ongrijpbaar\n",
+      "Audio previously downloaded for ongrijpbaar. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/levensbeschouwelijk\n",
+      "Audio previously downloaded for levensbeschouwelijk. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/in_grote_lijnen\n",
+      "No wiki page exists for in_grote_lijnen.\n",
+      "No parsing performed for in_grote_lijnen.\n",
+      "No audio file retrieved for in_grote_lijnen.\n",
+      "http://nl.wiktionary.org/wiki/luguber\n",
+      "Audio previously downloaded for luguber. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/saamhorigheid\n",
+      "Audio previously downloaded for saamhorigheid. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/sieren\n",
+      "Audio previously downloaded for sieren. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/pittoresk\n",
+      "Audio previously downloaded for pittoresk. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/onontbeerlijk\n",
+      "Audio previously downloaded for onontbeerlijk. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/weliswaar\n",
+      "Audio previously downloaded for weliswaar. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/verzilveren\n",
+      "Audio previously downloaded for verzilveren. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/uitpuilen\n",
+      "Audio previously downloaded for uitpuilen. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/gebaar\n",
+      "Audio previously downloaded for gebaar. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/gebaren\n",
+      "Audio previously downloaded for gebaren. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/tochtig\n",
+      "Audio previously downloaded for tochtig. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/verlangen\n",
+      "Audio previously downloaded for verlangen. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/verlangens\n",
+      "Audio previously downloaded for verlangens. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/egel\n",
+      "Audio previously downloaded for egel. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/egels\n",
+      "Audio previously downloaded for egels. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/vergevorderd\n",
+      "Audio previously downloaded for vergevorderd. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/stadium\n",
+      "Audio previously downloaded for stadium. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/stadia\n",
+      "Audio previously downloaded for stadia. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/tevens\n",
+      "Audio previously downloaded for tevens. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/autoluw\n",
+      "Audio previously downloaded for autoluw. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/nabootsen\n",
+      "Audio previously downloaded for nabootsen. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/oogsten\n",
+      "Audio previously downloaded for oogsten. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/sjansen\n",
+      "Audio previously downloaded for sjansen. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/slopershamer\n",
+      "Audio previously downloaded for slopershamer. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/slopershamers\n",
+      "Audio previously downloaded for slopershamers. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/steiger\n",
+      "Audio previously downloaded for steiger. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/steigers\n",
+      "Audio previously downloaded for steigers. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/pand\n",
+      "Audio previously downloaded for pand. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/panden\n",
+      "Audio previously downloaded for panden. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/gevel\n",
+      "Audio previously downloaded for gevel. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/gevels\n",
+      "Audio previously downloaded for gevels. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/gelijkvloers\n",
+      "Audio previously downloaded for gelijkvloers. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/gelijkvloerse\n",
+      "Audio previously downloaded for gelijkvloerse. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/guur\n",
+      "Audio previously downloaded for guur. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/smullen\n",
+      "Audio previously downloaded for smullen. Skipping download...\n",
+      "http://nl.wiktionary.org/wiki/personeelsbeloningen\n",
+      "No wiki page exists for personeelsbeloningen.\n",
+      "No parsing performed for personeelsbeloningen.\n",
+      "No audio file retrieved for personeelsbeloningen.\n",
+      "Sound files collected; writing to file.\n",
+      "File complete.\n"
+     ]
+    }
+   ],
    "source": [
     "# hardcoded test file\n",
     "vocab_file_path = r\"C:\\Users\\wisery\\Downloads\\Dutch-English-Vocabulary.csv\"\n",
@@ -239,6 +344,8 @@
     "# test data storage\n",
     "os.makedirs(audio_save_folder, exist_ok=True)\n",
     "\n",
+    "existing_sound_files = os.listdir(audio_save_folder) # to compare to prevent re-downloading files\n",
+    "\n",
     "# prepare words       \n",
     "words = process_vocab(vocab_file_path) # yields list of TranslationPair objects\n",
     "print('All vocab processed.')\n",
@@ -248,9 +355,13 @@
     "for word in words:\n",
     "    fetch_wiki_page(session, word)\n",
     "    parse_wiki_page(word)\n",
-    "    time.sleep(get_wait_time())\n",
-    "    audio_file_name = fetch_audio(session, word, audio_save_folder)\n",
-    "    #audio_file_name = 'Nl-'+ word.processed_vocab +'.ogg'\n",
+    "    if f\"Nl-{word.processed_vocab}.ogg\" in existing_sound_files:\n",
+    "        audio_file_name = 'Nl-'+ word.processed_vocab +'.ogg'\n",
+    "        print(f'Audio previously downloaded for {word.processed_vocab}. Skipping download...')\n",
+    "\n",
+    "    elif f\"Nl-{word.processed_vocab}.ogg\" not in existing_sound_files:\n",
+    "        time.sleep(get_wait_time())\n",
+    "        audio_file_name = fetch_audio(session, word, audio_save_folder)\n",
     "\n",
     "    # modify formatting based on if audio file download was successful\n",
     "    if not audio_file_name:\n",
