Added tags for presence of sound file

--- a/Attach Sound Files.ipynb
+++ b/Attach Sound Files.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,12 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class TranslationPair:\n",
-    "    def __init__(self, dutch_word, english_translation, processed_vocab, wiki_url = None, wiki_page = None, audio_url = None, tags=''):\n",
+    "    def __init__(self, dutch_word, english_translation, processed_vocab, wiki_url = None, wiki_page = None, audio_url = None, tags=[\"default\"]):\n",
     "        self.dutch_word = dutch_word\n",
     "        self.english_translation = english_translation\n",
     "        self.processed_vocab = processed_vocab\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
     }
    ],
    "source": [
-    "# hardcoded test file\n",
+    "# vocab file\n",
     "vocab_file_path = r\"C:\\Users\\wisery\\Downloads\\Dutch-English-Vocabulary.csv\"\n",
     "\n",
     "# avoid bot flagging\n",
@@ -366,10 +366,13 @@
     "    # modify formatting based on if audio file download was successful\n",
     "    if not audio_file_name:\n",
     "        dutch_complete = word.dutch_word\n",
+    "        print(word.tags)\n",
+    "        #word.tags.append('sound')\n",
     "    else:\n",
     "        dutch_complete = f'{word.dutch_word} \\n[sound:{str(audio_file_name)}]'\n",
+    "        word.tags.append('nosound')\n",
     "\n",
-    "    write_data[dutch_complete]= f'{word.english_translation}'\n",
+    "    write_data[dutch_complete]= f'{[word.english_translation, word.tags]}'\n",
     "\n",
     "print('Sound files collected; writing to file.')\n",
     "\n",
